[Read aloud] Attempt to use correct read aloud color in high contrast.
The previous color tokens SelectedItem and SelectedItemText
allowed the read aloud highlight to show in high contrast mode but
didn't quite match the expected color on Windows that the a11y team
suggested.

This should align the selection and read aloud highlight color
tokens.

Verified on Linux but will verify on Windows before marking the bug
as fixed.

Bug: b/434012711
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6806661
Commit-Queue: Lauren Winston <lwinston@google.com>
Cr-Commit-Position: refs/heads/main@{#1495101}

--- a/chrome/browser/resources/side_panel/read_anything/app.css
+++ b/chrome/browser/resources/side_panel/read_anything/app.css
@@ -131,8 +131,8 @@
 
 @media (forced-colors: active) {
   #appFlexParent .current-read-highlight {
-    background-color: SelectedItem;
-    color: SelectedItemText;
+    background-color: Highlight;
+    color: HighlightText;
   }
 }
 
